<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contactVM"
            type="com.bpmlinks.vbank.ui.contact.ContactViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ice_blue">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_three"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/back">
                <!--  app:layout_scrollFlags="scroll|enterAlways"-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtToolBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_text_bold"
                    android:text="@string/toolbar_title_contact"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/textHeader"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/color_grey" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pale_blue"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_display_semibold"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_20dp"
                    android:paddingEnd="@dimen/size_16dp"
                    android:paddingBottom="@dimen/size_20dp"
                    android:text="@string/lbl_contact_vbank"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1dp"
                    android:background="@color/color_grey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_bold"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/vbank_contact_customer"
                android:textColor="@color/color_grey5"
                android:textSize="@dimen/normal_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_regular"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_4"
                android:text="@string/vbank_available_day"
                android:textColor="@color/color_grey4"
                android:textSize="@dimen/small_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_regular"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/vbank_available_time"
                android:textColor="@color/color_grey4"
                android:textSize="@dimen/small_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_medium"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/vbank_call_us"
                android:textColor="@color/color_grey5"
                android:textSize="@dimen/normal_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/contact_call"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/sfpro_text_regular"
                android:gravity="center"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/vbank_mobile"
                android:textColor="@color/color_grey5"
                android:textSize="@dimen/normal_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/color_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_text_medium"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/vbank_email_us"
                android:textColor="@color/color_grey5"
                android:textSize="@dimen/normal_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/contact_mail"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/sfpro_text_regular"
                android:gravity="center|start"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/vbank_email"
                android:textColor="@color/blue"
                android:textSize="@dimen/normal_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/color_grey" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
