<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="networkSpeedVM"
            type="com.bpmlinks.vbank.ui.networkspeed.NetworkSpeedViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginEnd="@dimen/size_40dp"
            android:layout_marginBottom="@dimen/size_30dp"
            android:fontFamily="@font/sfpro_text_bold"
            android:gravity="center"
            android:text="@string/network_connectivity"
            android:textColor="@color/color_grey5"
            android:textSize="@dimen/size_26sp" />

        <com.bpmlinks.vbank.helper.speedview.SpeedView
            android:id="@+id/speed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:sv_centerCircleColor="#0000"
            app:sv_indicatorColor="@color/color_grey2"
            app:sv_markColor="@color/color_splash"
            app:sv_speedTextColor="@color/color_black"
            app:sv_speedTextPadding="@dimen/size_10dp"
            app:sv_speedTextPosition="BOTTOM_CENTER"
            app:sv_speedTextSize="@dimen/size_40sp"
            app:sv_speedometerWidth="@dimen/size_30dp"
            app:sv_unit="Mbps"
            app:sv_unitTextColor="@color/color_grey8"
            app:sv_unitTextSize="@dimen/size_16sp"
            app:sv_unitUnderSpeedText="true"
            app:sv_withIndicatorLight="true" />

        <LinearLayout
            android:id="@+id/layout_speed_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginEnd="@dimen/size_30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_curve_low"
                android:fontFamily="@font/sfpro_text_regular"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/low"
                android:textColor="@color/color_grey2"
                android:textSize="@dimen/size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_marginEnd="@dimen/size_10dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_curve_low"
                android:fontFamily="@font/sfpro_text_regular"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/medium"
                android:textColor="@color/color_grey2"
                android:textSize="@dimen/size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_curve_low"
                android:fontFamily="@font/sfpro_text_regular"
                android:gravity="center"
                android:padding="@dimen/size_8dp"
                android:text="@string/high"
                android:textColor="@color/color_grey2"
                android:textSize="@dimen/size_14sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size_30dp"
            android:layout_marginEnd="@dimen/size_30dp"
            android:fontFamily="@font/sfpro_text_regular"
            android:gravity="center"
            android:text="@string/connection_weak"
            android:textColor="@color/color_grey5"
            android:textSize="@dimen/size_20sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/size_30dp"
            android:layout_marginStart="@dimen/size_30dp"
            android:layout_marginEnd="@dimen/size_30dp"
            android:background="@drawable/rectangle_curve_grey"
            android:backgroundTint="@color/color_splash"
            android:fontFamily="@font/sfpro_text_regular"
            android:padding="@dimen/size_15dp"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>