<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/color_white"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/internet_connection"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_24"
                android:paddingStart="@dimen/dp_30"
                android:paddingEnd="@dimen/dp_30"
                android:textColor="@color/color_black01"
                android:gravity="center"
                android:fontFamily="@font/sfpro_text_medium"
                android:text="@string/lbl_no_internet_connection_title">

            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_40"
                android:paddingEnd="@dimen/dp_40"
                android:gravity="center"
                android:textSize="@dimen/normal_text"
                android:fontFamily="@font/sfpro_text_regular"
                android:text="@string/lbl_no_internet_connection_msg"
                android:textColor="@color/color_grey4">

            </androidx.appcompat.widget.AppCompatTextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/size_30dp"
            android:fontFamily="@font/sfpro_text_regular"
            android:background="@drawable/rectangle_curve_grey"
            android:backgroundTint="@color/color_splash"
            android:padding="@dimen/size_15dp"
            android:text="@string/btn_retry_internet"
            android:textAllCaps="false"
            android:layout_gravity="bottom"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_15sp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
