<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/size_16dp"
        android:visibility="gone"
        android:paddingRight="@dimen/size_16dp"
        android:paddingTop="@dimen/size_16dp"
        android:src="@drawable/home_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_text_bold"
        android:gravity="center"
        android:paddingStart="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:visibility="gone"
        android:text="@string/splash_title_string"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/splashscreennew" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="@dimen/size_16dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/size_30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_interact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingStart="@dimen/size_16dp"
        android:paddingTop="@dimen/size_20dp"
        android:paddingEnd="@dimen/size_16dp"
        android:text="@string/splash_description"
        android:textColor="@color/white"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        android:textSize="@dimen/size_14sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:src="@drawable/home_next" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_35dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered By "
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Los AmigosS"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
      />
</LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>



